--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,4 @@ BOOT_MODE=cloud
 OMNIAUTH_GITHUB_WEBHOOK_SECRET=1234567890
 OMNIAUTH_GITHUB_PUBLIC_KEY=1234567890
 OMNIAUTH_GITHUB_PRIVATE_KEY=1234567890
+ENABLE_AUTOMATIC_DNS_MAPPING=false
