remove secret key base

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 x-shared-env: &shared-env
   DATABASE_URL: postgres://postgres:password@postgres:5432
   BOOT_MODE: local
-  SECRET_KEY_BASE: a38fcb39d60f9d146d2a0053a25024b9
+  SECRET_KEY_BASE: ${SECRET_KEY_BASE:?SECRET_KEY_BASE is required}
   APP_HOST: http://localhost:${PORT:-3000}
   LOCAL_MODE_PASSWORDLESS: true
   ALLOWED_HOSTNAME: "*"
