--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,4 +15,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build with Docker Compose
-      run: docker compose build 
+      run: docker compose build
+      env:
+        SECRET_KEY_BASE: dummy-key-for-build 
