update image pull policy

--- a/resources/k8/stateless/cron_job.yaml
+++ b/resources/k8/stateless/cron_job.yaml
@@ -20,8 +20,8 @@ spec:
       <% end %>
           containers:
           - name: <%= project.name %>
-            image: <%= project.container_image_reference %>
-            imagePullPolicy: Always
+            image: <%= project.container_image_reference_with_digest %>
+            imagePullPolicy: IfNotPresent
             command: <% service.command.split(' ').each do |c| %>
               - <%= c %>
             <% end %>
