--- a/resources/k8/stateless/command.yaml
+++ b/resources/k8/stateless/command.yaml
@@ -18,8 +18,8 @@ spec:
       restartPolicy: Never
       containers:
       - name: <%= project.name %>
-        image: <%= project.container_image_reference %>
-        imagePullPolicy: Always
+        image: <%= project.container_image_reference_with_digest %>
+        imagePullPolicy: IfNotPresent
         command: <%= command.split.to_json %>
         envFrom:
         - configMapRef:
