refactored to fetch chart url information from upstream source

--- a/resources/helm/charts.yml
+++ b/resources/helm/charts.yml
@@ -2,7 +2,7 @@ helm:
   charts:
     - name: postgresql
       chart_url: bitnami/postgresql
-      friendly_name: PostgreSQL
+      display_name: PostgreSQL
       logo: /images/helm/postgresql.webp
       template:
         - name: Storage
@@ -12,7 +12,7 @@ helm:
           required: true
     - name: redis
       chart_url: bitnami/redis
-      friendly_name: Redis
+      display_name: Redis
       logo: /images/helm/redis.webp
       template:
         - name: Storage
@@ -28,10 +28,10 @@ helm:
     - name: openclaw
       logo: /images/helm/openclaw.webp
       chart_url: easy-openclaw/openclaw
-      friendly_name: OpenClaw
+      display_name: OpenClaw
     - name: metabase
       chart_url: pmint93/metabase
-      friendly_name: Metabase
+      display_name: Metabase
       logo: /images/helm/metabase.webp
       template:
         - name: Connection URI
@@ -48,7 +48,7 @@ helm:
     - name: elasticsearch
       logo: /images/helm/elasticsearch.webp
       chart_url: bitnami/elasticsearch
-      friendly_name: Elasticsearch
+      display_name: Elasticsearch
       template:
         - name: Storage size
           key: resources.limits.storage
@@ -58,7 +58,7 @@ helm:
     - name: clickhouse
       logo: /images/helm/clickhouse.webp
       chart_url: bitnami/clickhouse
-      friendly_name: ClickHouse
+      display_name: ClickHouse
       template:
         - name: Storage Size
           key: persistence.size
@@ -82,7 +82,7 @@ helm:
           default: 1
 
     - name: airbyte
-      friendly_name: Airbyte
+      display_name: Airbyte
       logo: /images/helm/airbyte.webp
       chart_url: airbyte/airbyte
       
