--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "apexcharts": "^3.54.0",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
